# yoyo-weather-api

./: .coveralls.yml  .editorconfig  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .scss-lint.yml  .stylelintrc  Pipfile  README.md  dev-requirements.txt  package.json  requirements.txt  setup.cfg
config/: app.example.ini
docs/: django-project.md  help.md
internals/webpack/: webpack.base.config.js  webpack.dev.config.js  webpack.production.config.js
resources/js/: index.js
resources/scss/: _custom.scss  _variables.scss  app.scss
src/apps/weather/: api_views.py  client.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/apps/weather/management/commands/: import_cities.py
src/apps/weather/migrations/: 0001_initial.py
src/common/: models.py
src/common/fields/: __init__.py  autoslugfield.py  slugfield.py
src/common/rest_framework/: paginator.py
src/common/utils/: utils.py
src/core/: urls.py
src/core/settings/: base.py  dev.py  production.py  tests.py
src/core/templates/: base.html  index.html
src/core/templates/partials/notifications/: alert_messages.html
