[metadata]
name = YOYO WEATHER API
maintainer = Double Eye
maintainer_email = matthew.stuart@double-eye.com

[options]
packages = find:
package_dir = src
include_package_data = true
install_requires =
    django
    psycopg2-binary

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths =
    .

[coverage:run]
branch = True
source =
    src
